test/deca/syntax/invalid/decl_var_incomplet_nom.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur, (manque nom et type)

{
    = 2;
}